--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,7 +2,8 @@ certifi==2017.4.17
 chardet==3.0.4
 idna==2.5
 nose==1.3.7
-pyOpenSSL==17.1.0
 nose-timer==0.7.0
+ordereddict==1.1
 requests==2.18.1
+termcolor==1.1.0
 urllib3==1.21.1
